# SuperENGINE

./: config.json
.commandcode/taste/: taste.md
src/: engine.rs  main.rs  trade_manager.rs
three/.commandcode/taste/: taste.md
three/src/: engine.rs  main.rs
topEngine/: Cargo.toml
topEngine/files/: engine.rs  trade_manager.rs
topEngine/src/: config.rs  engine.rs  main.rs  trade_manager.rs
william/src/: engine.rs  main.rs  trade_manager.rs
